# flower-of-life-protocol

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PROTOCOL.md  README.md  SECURITY.md  llms.txt  pyproject.toml  stranger_harness.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: demo_cost_calibration.py  demo_decision.py  demo_identity.py  demo_matching.py  demo_reputation.py  demo_roundtrip.py
docs/: CAPABILITY_MANIFEST_spec_v0.2.md  LIMITATIONS.md  appendix-A.md
docs/experiments/: inflated_claim.md
flp/: __init__.py  agent.py  cost_model.py  identity.py  manifest.py  matching.py  net.py  reputation.py  semantic.py  server.py
tests/: test_cost_model.py  test_identity.py  test_inflated_claim.py  test_manifest.py  test_matching.py  test_reputation.py  test_server.py
vocabulary/: core.json
