[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flower-of-life-protocol"
version = "1.1.0"
description = "A protocol for matching and trust between autonomous agents that don't know each other."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Rod Studio" }]
keywords = ["agents", "protocol", "reputation", "did", "cooperation", "trust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42",
    "rfc8785>=0.1",
    "base58>=2.1",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.0",
    "httpx>=0.24",
]
dev = [
    "pytest>=8",
    "sentence-transformers>=2.0",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/MontanaMiramar/flower-of-life-protocol"
Specification = "https://github.com/MontanaMiramar/flower-of-life-protocol/blob/main/PROTOCOL.md"

[tool.setuptools]
packages = ["flp"]

[tool.setuptools.package-data]
flp = ["../vocabulary/core.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
